# rust-quicklook-training

./: README.md
rs/: .gitignore  Cargo.toml  README.md  _rust-toolchain  build.rs  rust-toolchain
rs/Jupyter/: Demo.ipynb  README.md  requirements.txt
rs/advanced/: Cargo.toml
rs/advanced/benches/: parser.rs
rs/advanced/environment/: Dockerfile
rs/advanced/src/: emulable.rs  lib.rs  main.rs  network.rs  parser.rs
rs/advanced/src/blockchain/: block_impl.rs  blockref_safe_impl.rs  blockref_unsafe_impl.rs  mod.rs  process.rs
rs/benches/: allocations_inner_loop.rs  allocations_many_small.rs  dispatch.rs  factorial.rs  fibonacci.rs  iai_demo.rs  my_benchmark.rs  plot_benches.py  refcell.rs  smart_pointers.rs  sort.rs
rs/benches/environment/: Dockerfile
rs/compiler-test/: Cargo.toml
rs/compiler-test/src/: lib.rs
rs/demos/: macros_ast_inspection.rs  macros_ast_parsing.rs  macros_builder_pattern.rs  macros_dsl_routes.rs  macros_proc_function_like.rs  macros_proc_timing.rs  macros_quote_example.rs  macros_quote_generation.rs  macros_show_tokens.rs  macros_syn_example.rs  macros_validation_regex.rs  macros_validation_sql.rs
rs/demos/best_count/: Cargo.toml
rs/demos/best_count/src/: custom_operators.rs  lib.rs  main.rs  operator.rs  stack.rs
rs/demos/best_count/src/custom_operators/: add_operator.rs  concat_operator.rs  div_operator.rs  factorial_operator.rs  log2.rs  mult_operator.rs  pow_operator.rs  seq_data_operator.rs  sub_operator.rs  unique_data_operator.rs
rs/demos/best_count/tests/: display_test.rs
rs/demos/block_parser/: Cargo.toml  README.md
rs/demos/block_parser/benches/: parser.rs
rs/demos/block_parser/src/: block_interfaces.rs  block_iter.rs  incremental_block_builder.rs  lib.rs  owned_block.rs  process.rs  ref_block.rs
rs/demos/block_parser/src/async_tools/: stats.rs
rs/demos/c-interface-WIP/: Cargo.toml  TODO.md
rs/demos/cxx-interface/: Cargo.toml  build.rs
rs/demos/cxx-interface/src/: blobstore.cpp  main.rs
rs/demos/gossip-server/: Cargo.toml  README.md
rs/demos/gossip-server/src/: main.rs  options.rs
rs/demos/hello_macro/tests/: usage.rs
rs/demos/inventory-and-linkme/: Cargo.toml  README.md
rs/demos/inventory-and-linkme/src/: inventory_example.rs  linkme_example.rs
rs/demos/proc_macros/: Cargo.toml
rs/demos/proc_macros/builder_macro/: Cargo.toml
rs/demos/proc_macros/builder_macro/src/: lib.rs
rs/demos/proc_macros/builder_macro/tests/: usage.rs
rs/demos/proc_macros/darling_example/: Cargo.toml  README.md
rs/demos/proc_macros/darling_example/src/: lib.rs
rs/demos/proc_macros/darling_example/tests/: compile.rs  usage.rs
rs/demos/proc_macros/function_like_macro/: Cargo.toml
rs/demos/proc_macros/function_like_macro/src/: lib.rs
rs/demos/proc_macros/function_like_macro/tests/: usage.rs
rs/demos/proc_macros/hello_macro/: Cargo.toml
rs/demos/proc_macros/hello_macro/src/: lib.rs
rs/demos/proc_macros/memory_layout_derive/: Cargo.toml  README.md
rs/demos/proc_macros/memory_layout_derive/src/: lib.rs
rs/demos/proc_macros/memory_layout_derive/tests/: basic.rs
rs/demos/proc_macros/routes_dsl/: Cargo.toml
rs/demos/proc_macros/syn_quote_examples/: Cargo.toml
rs/demos/proc_macros/timing_macro/: Cargo.toml
rs/demos/proc_macros/validation_macros/: Cargo.toml
rs/demos/pyrs-feature/: Cargo.toml  build.rs  requirements.txt
rs/demos/pyrs-feature/src/: lib.rs
rs/demos/pyrs-feature/tests/: test_pyrs.py
rs/demos/quick-hash/: Cargo.toml
rs/demos/quick-hash/src/: main.rs
rs/demos/timing_macro/: Cargo.toml
rs/doclib/: Cargo.toml
rs/doclib/src/: lib.rs
rs/examples/: best_count.rs  julia.rs  locate_pointer.rs  quick_julia.rs
rs/full-tree/: Cargo.toml
rs/full-tree/libs/mylib1/: Cargo.toml
rs/full-tree/src/: dir1.rs  f1.rs  main.rs
rs/full-tree/src/dir1/: f2.rs
rs/full-tree/src/dir2/: f7.rs  mod.rs
rs/fun_with_rust/: Cargo.toml
rs/fun_with_rust/tests/: y_combinator.rs
rs/hello/: Cargo.toml
rs/procedural_macro/: Cargo.toml
rs/procedural_macro/src/: lib.rs
rs/src/: lib.rs  main.rs
rs/tests/: TODO.md  WIP-format.rs  WIP-generics_tricky_trait.rs  WIP-variance.rs  advanced_cell_refcell.rs  advanced_cell_refcell2.rs  advanced_channel.rs  advanced_list_of_result.rs  advanced_memory_layout.rs  advanced_mutex.rs  advanced_ownership.rs  advanced_pin.rs  advanced_pinning_data-WIP.rs  advanced_rwlock_mutex.rs  advanced_self_type_specification.rs  array.rs  array_and_slice.rs  async_await_state_machine.rs  async_execution_order.rs  async_future_by_hand.rs  async_rwlock_inversion.rs  async_stream_by_hand.rs  async_trivial.rs  async_waker_by_hand.rs  borrowing_move.rs  borrowing_readonly.rs  borrowing_readwrite.rs  closure.rs  closure_async.rs  closure_capture.rs  closure_inheritance.rs  concat_string.rs  concurrency_async.rs  concurrency_thread.rs  const_fn.rs  cow.rs  curious_turbofish.rs  custom_global_alloc.rs  custom_iterator.rs  custom_types.rs  (+134 more)
rs/tests/failures/: bad_lifetime.rs  bad_lifetime.stderr  generics_bad_usage.rs  generics_bad_usage.stderr  generics_usage.rs  generics_with_unsatisfied_bounds.stderr  mod.rs
rs/tests/failures/stable/: bad_lifetime.stderr  generics_bad_usage.stderr  generics_with_unsatisfied_bounds.stderr  missing_lifetime.rs  missing_lifetime.stderr  object_safety.rs  object_safety.stderr  pin_not_mut_self.rs  pin_not_mut_self.stderr  trait_std_from_orphan.rs  trait_std_from_orphan.stderr
rs/tests/failures/unstable/: bad_lifetime.stderr  generics_bad_usage.stderr  generics_with_unsatisfied_bounds.rs  generics_with_unsatisfied_bounds.stderr  missing_lifetime.stderr  object_safety.rs  object_safety.stderr
rs/tests/ownership_failures/: borrow_and_functions.rs  borrow_and_functions.stderr  explicit_clone.stderr  implicit_move.rs  implicit_move.stderr  in_async.rs  in_async.stderr  mod.rs
rs/tests/ownership_failures/stable/: explicit_clone.rs  explicit_clone.stderr  implicit_move.stderr
rs/tests/ownership_failures/unstable/: explicit_clone.stderr  implicit_move.stderr
rs/tests/unstable_mods/: coroutine_test.rs  generator_test.rs  mod.rs
(+36 files in other folders)
