[package]
name = "rs"
version = "0.1.0"
authors = ["Pascal HAVÉ <hpwxf@haveneer.com>"]
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
strum = { version = "0.22", features = ["derive"] }
auto_ops = "0.3.0"
procedural_macro = { path = "procedural_macro" }
futures = "0.3"
futures-timer = "3.0.2"
rand = "0.8.3"
# crates for julia example
image = "0.23.14"
num-complex = "0.4.0"
palette = "0.5.0"
rayon = "1.5"
chrono = "0.4"
serde = "1"
serde_json = "1"
criterion = { version = "0.4", features = ["html_reports"] } # // benchmark !
itertools = "0.14"

trybuild = "1.0"
memoffset = "0.6.3" # // as a replacement of compiletest_rs crate
#                # // use TRYBUILD=overwrite to write/replace stderr
tokio = { version = "1", features = ["full"] }
libc = "0.2.169"
pin-project = "1.1.9"
thiserror = "2"
ouroboros = "0.18"

# other demos
#serde = "1"
#serde-xml-rs = "0.6.0"
#priority-queue = "1.3.1"

[dev-dependencies]
rstest = "0.17"
mockall = "0.11"

[workspace]
members = [
  "hello",
  "procedural_macro",
  "full-tree",
  "full-tree/libs/mylib1",
  "demos/*",
  "doclib",
  "fun_with_rust",
  "advanced",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []
nightly = []

[[bench]]
name = "sort"
harness = false

[[bench]]
name = "fibonacci"
harness = false

[[bench]]
name = "factorial"
harness = false

[[bench]]
name = "smart_pointers"
harness = false

[[bench]]
name = "refcell"
harness = false
