[package]
name = "rs"
version = "0.1.0"
authors = ["Pascal HAVÉ <hpwxf@haveneer.com>"]
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
strum = { version = "0.22", features = ["derive"] }
auto_ops = "0.3.0"
procedural_macro = { path = "procedural_macro" }
futures = "0.3"
futures-timer = "3.0.2"
rand = "0.8.3"
# crates for julia example
image = "0.23.14"
num-complex = "0.4.0"
palette = "0.5.0"
rayon = "1.5"
chrono = { workspace = true }
serde = "1"
serde_json = "1"
itertools = "0.14"

trybuild = "1.0"
memoffset = "0.6.3" # // as a replacement of compiletest_rs crate
#                # // use TRYBUILD=overwrite to write/replace stderr
tokio = { workspace = true }
libc = "0.2.169"
pin-project = "1.1.9"
thiserror = "2"
ouroboros = "0.18"
hashbrown = "0.15"
bumpalo = "3.17"
arcstr = "1.2"
enum_dispatch = "0.3"
phf = { version = "0.11", features = ["macros"] }

# benchmark !
criterion = { version = "0.5", features = ["html_reports"] }
iai-callgrind = "0.14.0"

# other demos
#serde = "1"
#serde-xml-rs = "0.6.0"
#priority-queue = "1.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"

[dev-dependencies]
rstest = "0.17"
mockall = "0.11"

[profile.bench]
debug = true
strip = false

[workspace]
members = [
  "hello",
  "procedural_macro",
  "full-tree",
  "full-tree/libs/mylib1",
  "demos/*",
  "doclib",
  "fun_with_rust",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
chrono = "0.4"

[features]
default = []
nightly = []
iai = []

[[bench]]
name = "sort"
harness = false

[[bench]]
name = "criterion_demo"
harness = false

[[bench]]
name = "factorial"
harness = false

[[bench]]
name = "smart_pointers"
harness = false

[[bench]]
name = "refcell"
harness = false

[[bench]]
name = "dispatch"
harness = false

[[bench]]
name = "iai_demo"
harness = false

[[bench]]
name = "allocations_many_small"
harness = false

[[bench]]
name = "allocations_inner_loop"
harness = false
