[package]
name = "advanced"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
memmap2 = "0.9.5"
tempfile = "3.18.0"
iai-callgrind = "0.14.0"

[features]
iai = []

[[bench]]
name = "parser"
harness = false
