[package]
name = "compiler-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# requires: `rustup component add rustc-dev --toolchain nightly`
compiletest_rs = { version = "0.7", features = ["rustc"] }
