# this directory is a new crate which has to be add into members of root Cargo.toml

[package]
name = "doclib"
version = "0.1.0"
authors = ["Pascal HAVÉ <hpwxf@haveneer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
