[package]
name = "full-tree"
version = "0.1.0"
authors = ["Pascal HAVÉ <hpwxf@haveneer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mylib1 = { path = "libs/mylib1" }

# If full-tree was not already inside root project 
# its sub-packages should have been declared here like this
# [workspace]
# members = [ "libs/mylib1" ]