[package]
name = "gossip-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.1.0" # based on tokio
awc = "3" # actix-web client
tokio = { version = "1", features = ["time"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
clap = { version = "3.2.8", features = ["derive"] }
anyhow = { version = "1.0" }