[package]
name = "gossip-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.9.0" # based on tokio
tokio = { workspace = true }
console-subscriber = "0.4"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "3.2", features = ["derive"] }
anyhow = { version = "1.0" }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8.5"