[package]
name = "darling_example"
version = "0.1.0"
edition = "2021"
description = "Demonstration proc-macro crate using darling to parse attributes, with error/warning/debug examples"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
darling = "0.21"

[features]
default = []
# Enable verbose debug output from the macro
debug = []
# Nightly-only diagnostics (optional). Requires nightly compiler.
nightly = []

[dev-dependencies]
trybuild = "1.0"
