# This directory is a new crate which has to be add into members of root Cargo.toml
# If full-tree project was not already a 'members' of the root Cargo.toml, 
# this directory have been added as 'members' in full-tree/Cargo.toml  

[package]
name = "mylib1"
version = "0.1.0"
authors = ["Pascal HAVÉ <hpwxf@haveneer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
